--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,14 +21,23 @@ body {
   background: var(--clr-gray100);
 }
 
-.nav-list {
+.nav-container {
   background: white;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.nav-list {
   box-shadow: 0px 0px 10px var(--clr-gray200);
   margin: 0;
   padding: 1rem 0%;
   border-radius: var(--radius);
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
@@ -39,7 +48,6 @@ body {
 }
 
 .nav-item:first-child {
-  margin-right: auto;
   margin-left: 2rem;
 }
 
