--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -34,3 +34,19 @@
   cursor: pointer;
   bottom: 1rem;
 }
+
+.bounce {
+  animation: bounce 1s infinite;
+  animation-timing-function: ease;
+}
+@keyframes bounce {
+  20% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
