--- a/src/components/AboutPage/AboutPage.css
+++ b/src/components/AboutPage/AboutPage.css
@@ -1,5 +1,34 @@
 .ab-container {
   height: 100vh;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
   border: 2px solid tomato;
+}
+
+.ab-title {
+  font-size: 20px;
+  position: relative;
+  bottom: 14rem;
+  text-align: left;
+}
+
+.ab-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.lp-foto {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.ab-text {
 }
