--- a/src/components/AboutPage/AboutPage.css
+++ b/src/components/AboutPage/AboutPage.css
@@ -1,4 +1,4 @@
-.ab-container {
+.ab-section {
   height: 100vh;
   width: 100%;
 
@@ -6,15 +6,24 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: relative;
 
   border: 2px solid tomato;
 }
 
+.ab-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .ab-title {
   font-size: 20px;
-  position: relative;
-  bottom: 14rem;
-  text-align: left;
+  margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  width: 85%;
 }
 
 .ab-content {
@@ -23,12 +32,29 @@
   flex-wrap: wrap;
 }
 
-.lp-foto {
+.ab-foto {
   height: 250px;
   width: 250px;
   border-radius: 50%;
   margin: 0 auto;
 }
 
-.ab-text {
+.ab-text-container {
+  margin-left: 6rem;
+}
+
+@media screen and (max-width: 920px) {
+  .ab-title {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5rem;
+}
+
+h3 {
+  margin: 10;
 }
