refactor icons to be a reusable component

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -43,6 +43,10 @@
   text-decoration-color: #29e6a7;
 }
 
+a {
+  text-decoration: none;
+}
+
 @keyframes bounce {
   20% {
     transform: translateY(0);
