--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -1,5 +1,10 @@
 .pr-container {
   height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   border: 2px solid tomato;
 }
