--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -20,7 +20,7 @@
 
 .card-text-container {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   flex-direction: column;
 }
